Fix overlapping footer for landscape mode - Fix overlapping footer for landscape mode

--- a/BikeWale.UI/sass/partials/_gallery-popup.sass
+++ b/BikeWale.UI/sass/partials/_gallery-popup.sass
@@ -70,11 +70,11 @@
 
 	.swiper--next
 		@include arrow-right
-		right: 10px
+		right: 0
 
 	.swiper--prev
 		@include arrow-left
-		left: 10px
+		left: 0
 
 		&.swiper-button-disabled
 			opacity: .4
@@ -418,6 +418,15 @@
 		display: inline-block
 		vertical-align: middle
 
+.device--landscape-no-fullscreen
+	.orientation--landscape
+		.gallery-popup--active
+			.model-gallery
+				.swiper-slide
+					height: 90vh
+
+					img
+						max-height: 90%
 
 // color slug
 .gallery-color-slug--active
